--- a/public/components/menu.html
+++ b/public/components/menu.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-dark text-white">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Alterna navegação">
-      <span class="navbar-toggler-icon"></span>
+<nav class="navbar navbar-expand-lg fixed-top bg-dark">
+    <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="fas fa-bars"></span>
     </button>
     <a class="navbar-brand font-weight-bold text-white ml-5" href="index.php">
         Projeto MVP
