--- a/public/components/menu.html
+++ b/public/components/menu.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-dark">
+  <a class="navbar-brand font-weight-bold text-white ml-5" href="index.php">
+      Projeto MVP
+  </a>
     <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Alterna navegação">
       <span class="fas fa-bars"></span>
     </button>
-    <a class="navbar-brand font-weight-bold text-white ml-5" href="index.php">
-        Projeto MVP
-      </a>
     <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
-      <ul class="navbar-nav col-4 justify-content-center">
+      <ul class="navbar-nav col-5 justify-content-end">
         <li class="nav-item">
-            <a class="nav-link h6 font-weight-bold text-white" href="register.php"><span class="fas fa-user-circle mr-2 text-light"></span>Entrar</a>
+          <a class="nav-link h6 font-weight-bold text-white" href="content.php"><span class="fas fa-clone mr-2 text-light"></span>Conteúdo</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link h6 font-weight-bold text-white" href="#"><span class="fas fa-user mr-2 text-light"></span>Conteúdo</a>
+          <a class="nav-link h6 font-weight-bold text-white" href="event.php"><span class="fas fa-calendar mr-2 text-light"></span>Eventos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link h6 font-weight-bold text-white" href="#"><span class="fas fa-user mr-2 text-light"></span>Conteúdo</a>
+            <a class="nav-link h6 font-weight-bold text-white" href="register.php"><span class="fas fa-user mr-2 text-light"></span>Entrar</a>
         </li>
       </ul>
     </div>
