Correções no menu/ footer
...

--- a/public/components/footer.html
+++ b/public/components/footer.html
@@ -1,5 +1,5 @@
-<div class="jumbotron text-center" style="margin-bottom:0">
-    <p class="text-center">
+<div class=" py-1 my-0 sticky-bottom mt-5" style="margin-bottom:0">
+    <p class="text-center align-middle pt-2">
         <small id="passwordHelpInline" class="text-muted">MVP <a href="https://v4-alpha.getbootstrap.com/">Recode Pro 2020</a></small>
     </p>
 </div>
