--- a/public/components/menu.html
+++ b/public/components/menu.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
       <ul class="navbar-nav col-5 justify-content-end">
         <li class="nav-item">
-          <a class="nav-link h6 font-weight-bold text-dark" href="content.php"><span class="fas fa-clone mr-2 text-dark"></span>Conteúdo</a>
+          <a class="nav-link h6 font-weight-bold text-dark" href="reference.php"><span class="fas fa-clone mr-2 text-dark"></span>Referencias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link h6 font-weight-bold text-dark" href="event.php"><span class="fas fa-calendar mr-2 text-dark"></span>Eventos</a>
+          <a class="nav-link h6 font-weight-bold text-dark" href="locator.php"><span class="fas fa-calendar mr-2 text-dark"></span>Localizador</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link h6 font-weight-bold text-dark" href="register.php"><span class="fas fa-user mr-2 text-dark"></span>Entrar</a>
+            <a class="nav-link h6 font-weight-bold text-dark" href="login.php"><span class="fas fa-user mr-2 text-dark"></span>Entrar</a>
         </li>
       </ul>
     </div>
