--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,10 +2,61 @@
     padding: 110px 0px;
 }
 
+.main-spacing{
+    padding: 80px 0px;
+}
+
 .medium-spacing {
-    padding: 40px 0px;
+    padding: 50px 0px;
 }
 
 .small-spacing {
     padding: 30px 0px;
+}
+
+#mapid { height: 180px; }
+
+.members {
+    padding: 30px 0;
+}
+.members .member {
+    border: 0;
+    background-color: #f2f2f2;
+}
+.card-body {
+    padding: 62px 22px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.hover {
+    margin-top: -70px;
+    background-color: #ffffff;
+    margin-bottom: 70px;
+}
+.card-body p {
+    color: #ffa400;
+    margin-bottom: 12px;
+}
+ul {
+    margin: 0;
+    padding: 0;
+}
+.card-body ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 6px;
+}
+.card-body ul li a {
+    color: #000000;
+    font-weight: 300;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.4s ease-in-out;
+}
+.card-body ul li a:hover {
+    color: #ffffff;
+    background-color: #000000;
 }
