--- a/public/components/section-main.html
+++ b/public/components/section-main.html
@@ -1,32 +1,42 @@
 <section>
-    <div class="container py-5">
+    <div class="container py-5 mt-5">
 	<div class="row py-5">
             <div class="col-md-6">
-                <small>Lorem ipsum dolor sit, amet consectetur elit.</small>
-                <h1><b>Lorem ipsum dolor sit, amet consectetur.</b></h1>
-                <ul>
-                    <li>Vitae auctor integer congue magna at pretium</li>
-                    <li>Integer congue magna at pretium purus pretium ligula rutrum luctus risus eros dolor auctor ipsum blandit purus</li>
-                    <li>Sagittis congue augue egestas volutpat egestas magna</li>
-                    <li>Egestas magna ipsum vitae purus efficitur ipsum cubilia and laoreet pretium ligula rutrum luctus</li>
-                </ul>
-                               
+                <p class="display-4 font-weight-bold">Seja bem-vindo,</p>
+                    <p class="display-4 mb-5 font-weight-bold">o que deseja fazer?</p>
+                    <div class="row justify-content-initial">
+                        <button type="button" class="btn btn-outline-dark p-4 mr-5 font-weight-bold">Encontrar <br/>Referencias</button>
+                        <button type="button" class="btn btn-outline-dark p-4 font-weight-bold">Localizar <br/>Projetos</button>
+                        <p class="f-16 mt-5">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                    </div>
             </div>
             <div class="col-md-6 justify-content-center">
-                <img src="https://dsathemes.com/html/nextapp/files/images/image-18.png">
+                <img class="w-100 d-sm-none d-md-block d-none d-sm-block d-md-none d-lg-block" src="https://i.ibb.co/j86sfN7/image-1.png">
             </div>
         </div>
 </div>
 </section>
 
-<section class="boot-elemant-bg  py-md-5 py-4">
+<section class="boot-elemant-bg py-md-5 py-4 mt-5">
     <div class="container position-relative py-md-5 py-0">
         <div class="row">
             <div class="col-lg-8 offset-lg-2 text-center">
-                <span class="text-uppercase">Travel </span>
-                <h2 class="display-3 font-weight-bold">Lorem ipsum dolor sit, amet consectetur elit.</h2>
-                <p class="f-16 mb-4">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
-                <a href="#" class="btn btn-outline-primary btn-lg px-4"> Read More </a>
+                <span class="text-uppercase">Video</span>
+                <h2 class="display-3 font-weight-bold">Um pouco sobre a visão deste mundo.</h2>
+                <p class="f-16 mb-5">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+                <video class="w-100" controls
+                poster="https://upload.wikimedia.org/wikipedia/commons/e/e8/Elephants_Dream_s5_both.jpg" >
+                <source
+                    src="https://archive.org/download/ElephantsDream/ed_1024_512kb.mp4"
+                    type="video/mp4">
+                <source
+                    src="https://archive.org/download/ElephantsDream/ed_hd.ogv"
+                    type="video/ogg">
+                <source
+                    src="https://archive.org/download/ElephantsDream/ed_hd.avi"
+                    type="video/avi">
+                Your browser doesn't support HTML5 video tag.
+                </video>
             </div>
         </div>
     </div>
@@ -36,49 +46,40 @@
     <div class="container py-5">
 	<div class="row py-5">
 	        <div class="col-md-6">
-                <img src="https://dsathemes.com/html/nextapp/files/images/image-09.png">
+                <img class="w-100" src="https://i.ibb.co/vYWXtx5/image-3.png" width="500">
             </div>
             <div class="col-md-6">
-                <small>Lorem ipsum dolor sit, amet consectetur elit.</small>
-                <h1><b>Lorem ipsum dolor sit, amet consectetur.</b></h1>
-                <ul>
-                    <li>Vitae auctor integer congue magna at pretium</li>
-                    <li>Integer congue magna at pretium purus pretium ligula rutrum luctus risus eros dolor auctor ipsum blandit purus</li>
-                    <li>Sagittis congue augue egestas volutpat egestas magna</li>
-                    <li>Egestas magna ipsum vitae purus efficitur ipsum cubilia and laoreet pretium ligula rutrum luctus</li>
-                </ul>
+                <p class="h1 mb-5"><b>Sobre Projeto</b></p>
+                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                </p>
             </div>
         </div>
 </div>
 </section>
 
-<div class="container">
-    <div class="row mb-4">
-              <div class="col-md-12">
-                  <div class="card" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
-                      <div class="text-white text-center d-flex align-items-center py-5 px-4 my-5">
-                          <div>
-                              <h1 class="card-title pt-3 mb-5 font-bold"><strong>MVP</strong></h1>
-                              <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
-                                  laboriosam, voluptatem, optio vero odio nam sit officia accusamus
-                                  minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
-                                  dolorum!.</p>
-                              <a class="btn btn-outline-white"><i class="fa fa-clone left"></i> View project</a>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-    </div>
-
-<section class="py-5">
+<section class="py-5 mb-5">
     <div class="container py-5">
-    <div class="row text-center">
-        <div class="col-md-8 offset-md-2">
-	            <h1><b>Need Help? Looking For Support?</b></h1>
-	            <p>Aliquam a augue suscipit, luctus neque purus ipsum neque dolor primis libero tempus, blandit posuere ligula varius magna congue cursus porta</p>
-	        </div>
-    </div>
-  
+	<div class="row py-5">
+	        <div class="col-md-6">
+                <img class="w-100" src="https://i.ibb.co/CsYWFCg/image-4.png" width="500">
+            </div>
+            <div class="col-md-6">
+                <p class="h1 mb-5"><b>Sobre Projeto</b></p>
+                <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing  layouts and visual mockups.
+                </p>
+            </div>
+        </div>
+</div>
+</section>  
 </div>
 </section>
