--- a/public/components/team-card.html
+++ b/public/components/team-card.html
@@ -1,12 +1,12 @@
 <!-- Team -->
 <section id="team" class="pb-5">
     <div class="container">
-        <h5 class="h2 mb-5">Integrantes</h5>
+        <h5 class="h2 mb-5 text-center">Nossa Equipe</h5>
         <div class="row justify-content-center mx-auto">
             <!-- Team member -->
             <div class="row">
 
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mt-2">
                     <div class="image-flip" >
                         <div class="mainflip flip-0">
                             <div class="frontside">
